{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 31,
  "lineage": "5f7b5edd-ed6e-f978-cd8b-012b03d7a307",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:848939746456:instance/i-01d624264e38a0246",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d624264e38a0246",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps-Master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-032e6e5125fb06965",
            "private_dns": "ip-172-31-89-79.ec2.internal",
            "private_ip": "172.31.89.79",
            "public_dns": "ec2-54-84-245-133.compute-1.amazonaws.com",
            "public_ip": "54.84.245.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03960b767ca9d6625",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d60d76f7",
            "tags": {
              "Name": "idwall ec2"
            },
            "tags_all": {
              "Name": "idwall ec2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "idwall-ec2"
            },
            "vpc_security_group_ids": [
              "sg-7b90e37e"
            ]
          }
        }
      ]
    },
    {
      "module": "module.idwall-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848939746456:security-group/sg-07b081271b1b05c15",
            "description": "Allow ports 22, 80, 443",
            "egress": [],
            "id": "sg-07b081271b1b05c15",
            "ingress": [],
            "name": "idwall sg-20211004063640496000000001",
            "name_prefix": "idwall sg-",
            "owner_id": "848939746456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idwall sg"
            },
            "tags_all": {
              "Name": "idwall sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-6d58d110"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.idwall-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1163045776",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b081271b1b05c15",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.idwall-sg.aws_security_group.this",
            "module.idwall-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1973016665",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b081271b1b05c15",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.idwall-sg.aws_security_group.this",
            "module.idwall-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.idwall-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "179.100.5.175/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-2235390709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b081271b1b05c15",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.idwall-sg.aws_security_group.this",
            "module.idwall-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}